2025-03-11T01:48:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13778566365 # 590
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-11
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 921 1401 / 938 1418
* notice: next accum: outdated-unq outdated-all / unq all: 924 1404 / 938 1418
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-24 2025-02-25] / []

2025-03-10T01:24:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13754793580 # 589
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-10
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 921 1401 / 937 1417
* notice: next accum: outdated-unq outdated-all / unq all: 921 1401 / 938 1418
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-24 2025-03-09]

2025-03-09T01:26:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13743448870 # 588
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-09
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 920 1400 / 936 1416
* notice: next accum: outdated-unq outdated-all / unq all: 921 1401 / 937 1417
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-23] / [2025-03-08]

2025-03-08T01:20:11Z: