@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-11T01:48:32Z",
+  "timestamp" : "2025-03-12T01:47:11Z",
   "count_outdated" : 1404,
   "uniques_outdated" : 924,
-  "count" : 1418,
-  "uniques" : 938,
+  "count" : 1419,
+  "uniques" : 939,
   "clones" : [
     {
       "timestamp": "2025-02-26T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
