@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 6,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2025-03-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
