@@ -1,3 +1,12 @@
+2025-03-12T01:47:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13801897246 # 591
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-12
+* notice: last 14d: unq all: 6 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 924 1404 / 938 1418
+* notice: next accum: outdated-unq outdated-all / unq all: 924 1404 / 939 1419
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-03-11]
+
 2025-03-11T01:48:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13778566365 # 590
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-11
